 ~ Made map zoom with the slider smoother.
 ~ Removed separate fleet windows that opened when double-clicking a fleet in the main fleets window.
 ~ Limited messages window history to 100 lines.

Bugs:
 ~ Fixed problem with non-Latin font character rendering.
 ~ Fixed tamed monsters wandering off on their own initiative.


v0.3.17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

New Features / Improvements:
 ~ Added space monsters
 ~ Added neutral natives on planets
 ~ Added frequecy of monsters and natives can be adjusted during galaxy setup.
 ~ Ground troop ship parts that allow a ship to invade neutral or enemy planets.  Planets can be invaded only if their shield meters are zero.  The original and new owners get sitreps after invasions succeed.
 ~ Very basic ground combat system for capturing planets - ship combat can no longer capture planets.
 ~ Reduced turn processing time, particularly for large galaxies.
 ~ New versions will ignore old config.xml files, preventing some crashes after updating.
 ~ Added more lists of content, and more details about content, in the encyclopedia.
 ~ Reduced file save size by using binary format (instead of semi-readable text).

Balancing:
 ~ Generally a lot of little tweaks to make the beginning of the game more playable.
 ~ Decreased cost of colony pods by 20%.
 ~ Unexplored systems block resource sharing between planets, preventing players from knowing about a hostile presense in a system before exploring it.
 ~ Ships no longer have functional detection when moving on starlanes.  Ships must be in a system to detect objects.
 ~ Planets can be seen, although without details, by any object in their system, regardless of detection and stealth.  Detection strength above planet stealth gives details about the planet.
 ~ Planets do not increase their shield, troops, or defense meters on a turn they are attacked.